--- a/CPP-04/ex00/Makefile
+++ b/CPP-04/ex00/Makefile
@@ -1,6 +1,6 @@
-SRC = source/main.cpp source/Animal.cpp source/Dog.cpp source/Cat.cpp
+SRC = source/main.cpp source/utils.cpp source/Animal.cpp source/Dog.cpp source/Cat.cpp source/WrongCat.cpp source/WrongAnimal.cpp
 OBJ = $(SRC:.cpp=.o)
-HEADERS = headers/Animal.hpp headers/Dog.hpp headers/Cat.hpp
+HEADERS = headers/utils.hpp headers/Animal.hpp headers/Dog.hpp headers/Cat.hpp source/WrongCat.hpp source/WrongAnimal.hpp
 NAME = poly
 FLAGS= -Wall -Wextra -Werror -std=c++98
 
