--- a/CPP-04/ex03/Makefile
+++ b/CPP-04/ex03/Makefile
@@ -1,8 +1,8 @@
-SRC = source/AMateria.cpp source/Cure.cpp source/Ice.cpp source/main.cpp source/utils.cpp source/Character.cpp source/MateriaSource.cpp source/MateriasList.cpp
+SRC = source/AMateria.cpp source/Cure.cpp source/Ice.cpp source/main.cpp source/utils.cpp source/Character.cpp source/MateriaSource.cpp source/MateriasList.cpp source/Node.cpp
 OBJ = $(SRC:.cpp=.o)
-HEADERS = headers/AMateria.hpp headers/Cure.hpp headers/Ice.hpp headers/ICharacter.hpp headers/utils.hpp headers/Character.hpp headers/MateriaSource.hpp headers/MateriasList.hpp
+HEADERS = headers/AMateria.hpp headers/Cure.hpp headers/Ice.hpp headers/ICharacter.hpp headers/utils.hpp headers/Character.hpp headers/MateriaSource.hpp headers/MateriasList.hpp headers/Node.hpp
 NAME = interfaces
-FLAGS= -Wall -Wextra -Werror -std=c++98
+FLAGS= -Wall -Wextra -Werror -std=c++98 
 
 all: $(NAME)
 
