--- a/CPP-05/ex03/Makefile
+++ b/CPP-05/ex03/Makefile
@@ -1,7 +1,7 @@
 SRC = src/AForm.cpp src/Bureaucrat.cpp src/PresidentialPardonForm.cpp src/RobotomyRequestForm.cpp src/ShrubberyCreationForm.cpp src/main.cpp src/Intern.cpp  
 OBJ = $(SRC:.cpp=.o)
 HEADERS = headers/AForm.hpp headers/Bureaucrat.hpp headers/PresidentialPardonForm.hpp headers/RobotomyRequestForm.hpp headers/ShrubberyCreationForm.hpp headers/Intern.hpp 
-NAME = bs
+NAME = intern
 FLAGS= -Wall -Wextra -Werror -std=c++98  
 
 
